@@ -37,7 +37,7 @@ AC_DEFUN([EDELIB_FLTK], [
 			AC_MSG_RESULT(yes)
 			;;
 			dnl check for FLTK 1.3.x branch
-			["1.3."[01]])
+			["1.3."[0123456789]])
 			AC_MSG_RESULT([yes... Looks like you have unstable FLTK branch ($fltk_version). edelib is not well tested with these FLTK versions])
 			;;
 			*)
@@ -49,6 +49,23 @@ AC_DEFUN([EDELIB_FLTK], [
 		dnl remove -lsupc++ so we can chose what to use
 		FLTK_LIBS=`$FLTK_CONFIG --ldflags | sed -e 's/-lsupc++//g'`
 		FLTK_LIBS_FULL=`$FLTK_CONFIG --use-images --ldflags | sed -e 's/-lsupc++//g'`
+
+		dnl check if FLTK was compiled with XFT support
+		AC_MSG_CHECKING([for XFT support in FLTK])
+		fltk_have_xft="no"
+
+		for i in $FLTK_LIBS; do
+			if test "$i" = "-lXft"; then
+				fltk_have_xft="yes"
+			fi
+		done
+
+		if test $fltk_have_xft = "yes"; then
+			AC_MSG_RESULT(yes)
+			AC_DEFINE(HAVE_FLTK_XFT, 1, [Define to 1 if FLTK was compiled with XFT support])
+		else
+			AC_MSG_RESULT(no)
+		fi
 	else
 		AC_MSG_ERROR([You don't have fltk installed. To compile edelib, you will need it.])
 	fi
